[metadata]
name = f4eparser
version = 0.1.1
author = F4E neutronics team
author_email = N.A.
description = API for MCNP input and output parsing 
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://github.com/pypa/sampleproject
# project_urls =
#     Bug Tracker = https://github.com/pypa/sampleproject/issues
# classifiers =
#     Programming Language :: Python :: 3
#     License :: OSI Approved :: MIT License
#     Operating System :: OS Independent
[metadata]
version = attr: f4enix.__version__

[options]
# package_dir =
#     = mcparser
packages =
    f4enix
    f4enix.input
    f4enix.output
    f4enix.resources
python_requires = >=3.10
install_requires =
    appdirs
    asttokens
    attrs
    backcall
    charset-normalizer
    colorama
    comm
    contourpy
    cycler
    debugpy
    decorator
    et-xmlfile
    exceptiongroup
    executing
    fonttools
    idna
    imageio
    iniconfig
    jedi
    kiwisolver
    matplotlib
    matplotlib-inline
    nest-asyncio
    numjuggler
    numpy
    openpyxl
    packaging
    pandas
    parso
    pathlib2
    pickleshare
    Pillow
    platformdirs
    pluggy
    pooch
    prompt-toolkit
    psutil
    pure-eval
    pycodestyle
    Pygments
    pyparsing
    pytest
    python-dateutil
    pytz
    pyvista
    pywin32
    pyzmq
    requests
    scipy
    scooby
    six
    stack-data
    tomli
    tornado
    traitlets
    urllib3
    vtk
    wcwidth
    wincertstore

[options.packages.find]
where = f4enix

[options.package_data]
# Include any *.txt files found in the resources package (but not in its
# subpackages):
* = *.txt