[metadata]
name = f4enix
version = attr: f4enix.__version__
author = F4E neutronics team
author_email = sc-radiationtransport@f4e.europa.eu
description = API for Monte Carlo input and output parsing 
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://github.com/pypa/sampleproject
# project_urls =
#     Bug Tracker = https://github.com/pypa/sampleproject/issues
# classifiers =
#     Programming Language :: Python :: 3
#     License :: OSI Approved :: MIT License
#     Operating System :: OS Independent

[options]
# package_dir =
#     = mcparser
packages =
    f4enix
    f4enix.input
    f4enix.output
    f4enix.resources
python_requires = >= 3.10
install_requires =
    appdirs
    asttokens
    attrs
    backcall
    charset-normalizer
    colorama
    comm
    contourpy
    cycler
    debugpy
    decorator
    et-xmlfile
    exceptiongroup
    executing
    fonttools
    idna
    imageio
    iniconfig
    jedi
    kiwisolver
    matplotlib
    matplotlib-inline
    nest-asyncio
    numba
    numjuggler
    numpy
    openpyxl
    packaging
    pandas
    parso
    pathlib2
    pickleshare
    Pillow
    platformdirs
    pluggy
    pooch
    prompt-toolkit
    psutil
    pure-eval
    pycodestyle
    Pygments
    pyparsing
    pytest
    python-dateutil
    python-docx
    pytz
    pyvista >= 0.39.1
    pyzmq
    requests
    scipy
    scooby
    six
    stack-data
    tables
    tomli
    tornado
    tqdm
    traitlets
    urllib3
    vtk
    wcwidth
    wincertstore

[options.packages.find]
where = f4enix

[options.package_data]
# Include any *.txt files found in the resources package (but not in its
# subpackages):
* = *.txt